--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "hardhat": "^2.22.6",
         "prettier": "^3.3.2",
         "prettier-plugin-solidity": "^1.3.1",
-        "solc": "^0.8.26"
+        "solc": "^0.8.26",
+        "typescript": "^5.5.3"
     }
 }
