--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,19 @@ dist
 
 # 以上为通用配置
 
+.env
+
+# Hardhat files
+/cache
+/artifacts
+
+# TypeChain files
+/typechain
+/typechain-types
+
+# solidity-coverage files
+/coverage
+/coverage.json
+
+# Hardhat Ignition default folder for deployments against a local node
+ignition/deployments/chain-31337
