--- a/package.json
+++ b/package.json
@@ -7,10 +7,26 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@nomicfoundation/hardhat-ignition": "^0.15.0",
+        "@nomicfoundation/hardhat-ignition-viem": "^0.15.0",
+        "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+        "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
+        "@nomicfoundation/hardhat-verify": "^2.0.0",
+        "@nomicfoundation/hardhat-viem": "^2.0.0",
+        "@openzeppelin/contracts": "^5.0.2",
+        "@types/chai": "^4.2.0",
+        "@types/chai-as-promised": "^7.1.6",
+        "@types/mocha": ">=9.1.0",
+        "@types/node": ">=18.0.0",
+        "chai": "^4.2.0",
         "hardhat": "^2.22.6",
+        "hardhat-gas-reporter": "^1.0.8",
         "prettier": "^3.3.2",
         "prettier-plugin-solidity": "^1.3.1",
         "solc": "^0.8.26",
-        "typescript": "^5.5.3"
+        "solidity-coverage": "^0.8.0",
+        "ts-node": ">=8.0.0",
+        "typescript": "^5.5.3",
+        "viem": "^2.7.6"
     }
 }
