--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
         "ts-node": ">=8.0.0",
         "typescript": "^5.5.3",
         "viem": "^2.7.6"
+    },
+    "dependencies": {
+        "@uniswap/sdk-core": "^5.3.1",
+        "@uniswap/v3-core": "^1.0.1",
+        "@uniswap/v3-sdk": "^3.13.1"
     }
 }
