--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/mocha": ">=9.1.0",
         "@types/node": ">=18.0.0",
         "chai": "^4.2.0",
+        "ethers": "^6.13.1",
         "hardhat": "^2.22.6",
         "hardhat-gas-reporter": "^1.0.8",
         "prettier": "^3.3.2",
