--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@nomicfoundation/hardhat-ethers": "^3.0.6",
         "@nomicfoundation/hardhat-ignition": "^0.15.0",
         "@nomicfoundation/hardhat-ignition-viem": "^0.15.0",
         "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
